# NoKeeA

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: docker-build.yml  docker-buildable.yml  generate_docs.yml  python-app.yml  restrict_pr.yml  test.yml
.streamlit/: config.toml
src/NoKeeA/: main.py
src/NoKeeA/AI/: __init__.py  video2text.py
src/NoKeeA/UI/: __init__.py  start.py  streamlit_content.py  streamlit_sidebar.py  streamlit_ui.py
src/NoKeeA/utils/: file_import_export.py  file_operations.py  session_state.py  wikipedia_api.py
tests/: conftest.py  test_main.py
tests/AI/: test_video2text.py
tests/UI/: test_start.py  test_streamlit_content.py  test_streamlit_content_ai.py  test_streamlit_sidebar.py  test_streamlit_ui.py
tests/utils/: test_file_import_export.py  test_file_operations.py  test_wikipedia_api.py
