[project]
name = "nokeea"
version = "0.1.0"
description = "The package provides a web application to create and save AI-supported notes."
authors = [
    {name = "Maximilian Schüller",email = "you@example.com"},
    {name = "Fynn Thierling",email = "you@example.com"},
    {name = "Egzon Zenuni",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
debugpy = "^1.8.13"
pre-commit = "^4.2.0"
