[project]
name = "nokeea"
version = "0.1.0"
description = "The package provides a web application to create and save AI-supported notes."
authors = [
    {name = "Maximilian Schüller",email = "you@example.com"},
    {name = "Fynn Thierling",email = "you@example.com"},
    {name = "Egzon Zenuni",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "streamlit-quill (>=0.0.3,<0.0.4)",
    "PyMuPDF (>=1.23.0,<2.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "reportlab (>=4.1.0,<5.0.0)",
    "Pillow (>=10.0.0,<11.0.0)"
]

[tool.poetry]
packages = [
    { include = "NoKeeA", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
debugpy = "^1.8.13"
pre-commit = "^4.2.0"
psutil =  "^7.0.0"
